tests/negative/Iterators4.juvix
module Iterators4;

syntax iterator map;
syntax iterator map {init: 0};
map {A B} (f : A → B) (x : A) : B := f x;

builtin bool
type Bool :=
  | true : Bool
  | false : Bool;

main : Bool := map (y := false) (x in true) x;
